--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'com.google.android.gms:play-services-places:11.8.0'
 }
